			+ Added new style JavaScript invocation, with the ability to prevent one banner from being displayed twice on one page  (Niels, 2002-04-30)
			+ Added the ability to change the target frame for converted Flash banners (Niels, 2002-07-04)
			+ During link conversion of Flash files, it is now possible to compress uncompressed files, even created by older versions of Flash  (Niels, 2002-07-04)

			+ Misc changes to library and function names
			  - 2001-10-20:  Renamed nocache.inc.php to lib-cache.inc.php  (Niels) 
			  - 2001-10-20:  Renamed acl.inc.php to lib-acl.inc.php  (Niels) 
			  - 2001-10-20:  Renamed dblib.php to lib-db.inc.php	 (Niels) 
			  - 2001-10-20:  Renamed db_* functions to phpAds_db*  (Niels) 
			  - 2001-10-20:  Renamed acl_* functions to phpAds_acl*  (Niels) 
			  - 2001-10-20:  Replaced mysql_* functions with phpAds_db* stubs  (Niels) 
			  - 2001-10-27:  All config variables are now stored in one array  (Niels) 
			  - 2001-10-27:  Changed the name of the database settings in config.inc.php  (Niels) 
			  - 2001-10-27:  Made default values for settings in config.inc.php more consistent  (Niels) 
			  - 2001-10-27:  Moved all includes inside view.inc.php to all invocation files  (Niels) 
			  - 2002-02-06:  view.inc.php is now split into multiple libraries, so only code actually needed is included to achieve a big improvement in performance  (Niels) 
			  - 2002-03-07:  Moved invocation code into lib-invocation.inc.php  (Matteo) 
			  - 2002-04-01:	 Renamed campaign-index and zone-index  (Niels)
			  - 2002-04-11:  Added a product string to lib-dbconfig, for easier porting  (Niels)

			+ Misc changes
			  - 2001-10-20:  Moved some functions around to make sure no unneeded functions were included during invocation.  (Niels) 
			  - 2001-10-24:  Removed space from UNIQUE INDEX definition in all.sql  (Niels) 
			  - 2001-10-24:  Added $phpads_proxy_lookup option  (Niels) 