@@ -135,6 +135,16 @@ if ($found)
 		SetCookie("phpAds_blockAd[".$row['bannerid']."]", time(), time() + $row['block'], '/');
 	}
 	
+	if ($row['capping'] != '' && $row['capping'] != '0')
+	{
+		if (isset($phpAds_capAd) && isset($phpAds_capAd[$row['bannerid']]))
+			$newcap = $phpAds_capAd[$row['bannerid']] + 1;
+		else
+			$newcap = 1;
+		
+		SetCookie("phpAds_capAd[".$row['bannerid']."]", $newcap, time()+31536000, '/');
+	}
+	
 	// Send bannerid headers
 	$cookie['bannerid'] = $row["bannerid"];
 	
